<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BudgetCare</string>
    <string name="menu_gastos">Gastos</string>
    <string name="menu_facturas">Facturas</string>
    <string name="menu_ingresos">Ingresos</string>
    <string name="menu_presupuesto">Presupuesto</string>
    <string name="menu_cuentas">Cuentas</string>
    <string name="account_boolean_sum">Incluir en los totales de la Pagina de Inicio</string>
    <string name="account_type">Tipo</string>
    <string name="account_name_hint">Nombre</string>
    <string name="account_type_hint">Tipo</string>
    <string name="account_type_currenty_hint">Moneda</string>
    <string name="account_datetime_hint">A la fecha de</string>
    <string name="account_balance_hint">Saldo</string>
    <string name="btn_save">Guardar</string>
    <string name="account_title_add">Añadir Cuenta</string>
    <string name="title_activity_account_list">Cuentas</string>
    <string name="group_currency">Bs.</string>
    <string name="title_activity_expenses">Añadir Gasto</string>
    <string name="expenses_date">Fecha</string>
    <string name="expenses_amount">Cantidad</string>
    <string name="expenses_pay_from">Pagar desde</string>
    <string name="expenses_description">Descripción</string>
    <string name="expenses_btn_save">Guardar</string>
    <string name="title_activity_expenses_list">ExpensesList</string>
    <string name="expenses_without">Sin gastos</string>
    <string name="spinner_expenses_subcategory">Subcategoría</string>
    <string name="spinner_expenses_category">Categoría</string>
    <string name="form_field_not_blank">Este campo no puede estar vacio.</string>
    <string name="message_error_save">No se pudo guardar el formulario.</string>
    <string name="title_activity_budget">Presupuesto</string>
    <string name="budget_form_amount">Total Cantidad Presupuesto</string>
    <string name="budget_form_btn_save">Guardar</string>
    <string name="insufficient_balance_expenses">Este monto excede el total del cuenta.</string>
    <string name="form_field_not_blank_account">La cuenta no puedes estar vacia. Favor cree una cuenta.</string>
    <string name="ammount_template">Bs.</string>
</resources>