<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="mobile.rojas.com.budgetcare.activity.ExpensesActivity"
    tools:showIn="@layout/activity_expenses">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/form_padding">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:text="@string/spinner_expenses_category"
            tools:ignore="RtlHardcoded,RtlSymmetry" />

        <!--android:textColor="@color/accent"-->


        <Spinner
            android:id="@+id/spinner_expenses_category"
            android:layout_width="match_parent"
            android:layout_height="25dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/form_padding">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:text="@string/spinner_expenses_subcategory"
            tools:ignore="RtlHardcoded,RtlSymmetry" />

        <!--android:textColor="@color/accent"-->


        <Spinner
            android:id="@+id/spinner_expenses_subcategory"
            android:layout_width="match_parent"
            android:layout_height="25dp" />

    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/expenses_form_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:hint="@string/expenses_date"
            android:inputType="date"
            android:onClick="setDate" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/expenses_form_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/expenses_amount"
            android:inputType="numberDecimal" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/form_padding">

        <TextView
            android:id="@+id/textView110"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:text="@string/expenses_pay_from"
            tools:ignore="RtlHardcoded,RtlSymmetry" />

        <!--android:textColor="@color/accent"-->


        <Spinner
            android:id="@+id/spinner_expenses_pay"
            android:layout_width="match_parent"
            android:layout_height="25dp" />

    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/expenses_form_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:hint="@string/expenses_description"
            android:inputType="text|textMultiLine"
            android:lines="3"
            android:maxLines="3" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="save"
        android:text="@string/expenses_btn_save" />
</LinearLayout>
